# SmartEdge-Gateway

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: Static_analysis.yml
inc/: DatabaseManager.hpp  Mqtt_publish.hpp  RingBuffer.hpp  Sensor.hpp  SmartEdgeGateway.hpp
src/: DatabaseManager.cpp  Mqtt_publish.cpp  Sensor.cpp  SmartEdgeGateway.cpp  main.cpp
